rough first version

--- a/notebooks/lipizones/lipizones.ipynb
+++ b/notebooks/lipizones/lipizones.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
        "numpy.ndarray"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
        "[2009841 rows x 9 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +537,7 @@
        " {'label': 'level 14 12782', 'value': 'level 14 12782', 'group': 'level 14'}]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -793,7 +793,7 @@
        "[2009841 rows x 12 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1816,7 +1816,7 @@
        " ...]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1834,7 +1834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1843,7 +1843,7 @@
        "[]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1862,7 +1862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -2101,7 +2101,7 @@
        "[37955 rows x 12 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2109,6 +2109,367 @@
    "source": [
     "section1_df = df[df[\"Section\"] == 1]\n",
     "section1_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>x_ccf</th>\n",
+       "      <th>y_ccf</th>\n",
+       "      <th>z_ccf</th>\n",
+       "      <th>Section</th>\n",
+       "      <th>x_index</th>\n",
+       "      <th>y_index</th>\n",
+       "      <th>z_index</th>\n",
+       "      <th>lipotype</th>\n",
+       "      <th>level</th>\n",
+       "      <th>value</th>\n",
+       "      <th>slice</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>section1_pixel17_100</td>\n",
+       "      <td>4.409796</td>\n",
+       "      <td>1.227594</td>\n",
+       "      <td>7.131945</td>\n",
+       "      <td>1</td>\n",
+       "      <td>158</td>\n",
+       "      <td>49</td>\n",
+       "      <td>287</td>\n",
+       "      <td>level_11_1642.0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1642.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>section1_pixel17_105</td>\n",
+       "      <td>4.412813</td>\n",
+       "      <td>1.206127</td>\n",
+       "      <td>6.998784</td>\n",
+       "      <td>1</td>\n",
+       "      <td>158</td>\n",
+       "      <td>48</td>\n",
+       "      <td>282</td>\n",
+       "      <td>level_9_419.0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>419.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>section1_pixel17_106</td>\n",
+       "      <td>4.413417</td>\n",
+       "      <td>1.201827</td>\n",
+       "      <td>6.972198</td>\n",
+       "      <td>1</td>\n",
+       "      <td>158</td>\n",
+       "      <td>48</td>\n",
+       "      <td>281</td>\n",
+       "      <td>level_4_15.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>section1_pixel17_107</td>\n",
+       "      <td>4.414021</td>\n",
+       "      <td>1.197525</td>\n",
+       "      <td>6.945627</td>\n",
+       "      <td>1</td>\n",
+       "      <td>158</td>\n",
+       "      <td>47</td>\n",
+       "      <td>280</td>\n",
+       "      <td>level_7_97.0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>97.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>section1_pixel18_108</td>\n",
+       "      <td>4.410868</td>\n",
+       "      <td>1.219961</td>\n",
+       "      <td>6.914298</td>\n",
+       "      <td>1</td>\n",
+       "      <td>158</td>\n",
+       "      <td>48</td>\n",
+       "      <td>278</td>\n",
+       "      <td>level_11_1641.0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1641.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1445035</th>\n",
+       "      <td>section21_pixel91_95</td>\n",
+       "      <td>10.552873</td>\n",
+       "      <td>2.654752</td>\n",
+       "      <td>8.538029</td>\n",
+       "      <td>21</td>\n",
+       "      <td>407</td>\n",
+       "      <td>106</td>\n",
+       "      <td>345</td>\n",
+       "      <td>level_14_12778.0</td>\n",
+       "      <td>14</td>\n",
+       "      <td>12778.0</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1483511</th>\n",
+       "      <td>section21_pixel234_242</td>\n",
+       "      <td>9.604446</td>\n",
+       "      <td>6.458682</td>\n",
+       "      <td>4.995562</td>\n",
+       "      <td>21</td>\n",
+       "      <td>369</td>\n",
+       "      <td>258</td>\n",
+       "      <td>200</td>\n",
+       "      <td>level_14_7861.0</td>\n",
+       "      <td>14</td>\n",
+       "      <td>7861.0</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1518248</th>\n",
+       "      <td>section22_pixel165_126</td>\n",
+       "      <td>11.311469</td>\n",
+       "      <td>4.542833</td>\n",
+       "      <td>7.494809</td>\n",
+       "      <td>22</td>\n",
+       "      <td>438</td>\n",
+       "      <td>181</td>\n",
+       "      <td>302</td>\n",
+       "      <td>level_14_7866.0</td>\n",
+       "      <td>14</td>\n",
+       "      <td>7866.0</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1518539</th>\n",
+       "      <td>section22_pixel166_92</td>\n",
+       "      <td>11.350030</td>\n",
+       "      <td>4.663022</td>\n",
+       "      <td>8.230598</td>\n",
+       "      <td>22</td>\n",
+       "      <td>439</td>\n",
+       "      <td>186</td>\n",
+       "      <td>332</td>\n",
+       "      <td>level_14_7878.0</td>\n",
+       "      <td>14</td>\n",
+       "      <td>7878.0</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1541524</th>\n",
+       "      <td>section22_pixel253_241</td>\n",
+       "      <td>11.103614</td>\n",
+       "      <td>5.779313</td>\n",
+       "      <td>3.528686</td>\n",
+       "      <td>22</td>\n",
+       "      <td>429</td>\n",
+       "      <td>230</td>\n",
+       "      <td>139</td>\n",
+       "      <td>level_14_7853.0</td>\n",
+       "      <td>14</td>\n",
+       "      <td>7853.0</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>271 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                             id      x_ccf     y_ccf     z_ccf  Section  \\\n",
+       "0          section1_pixel17_100   4.409796  1.227594  7.131945        1   \n",
+       "1          section1_pixel17_105   4.412813  1.206127  6.998784        1   \n",
+       "2          section1_pixel17_106   4.413417  1.201827  6.972198        1   \n",
+       "3          section1_pixel17_107   4.414021  1.197525  6.945627        1   \n",
+       "24         section1_pixel18_108   4.410868  1.219961  6.914298        1   \n",
+       "...                         ...        ...       ...       ...      ...   \n",
+       "1445035    section21_pixel91_95  10.552873  2.654752  8.538029       21   \n",
+       "1483511  section21_pixel234_242   9.604446  6.458682  4.995562       21   \n",
+       "1518248  section22_pixel165_126  11.311469  4.542833  7.494809       22   \n",
+       "1518539   section22_pixel166_92  11.350030  4.663022  8.230598       22   \n",
+       "1541524  section22_pixel253_241  11.103614  5.779313  3.528686       22   \n",
+       "\n",
+       "         x_index  y_index  z_index          lipotype  level    value  slice  \n",
+       "0            158       49      287   level_11_1642.0     11   1642.0      1  \n",
+       "1            158       48      282     level_9_419.0      9    419.0      1  \n",
+       "2            158       48      281      level_4_15.0      4     15.0      1  \n",
+       "3            158       47      280      level_7_97.0      7     97.0      1  \n",
+       "24           158       48      278   level_11_1641.0     11   1641.0      1  \n",
+       "...          ...      ...      ...               ...    ...      ...    ...  \n",
+       "1445035      407      106      345  level_14_12778.0     14  12778.0     21  \n",
+       "1483511      369      258      200   level_14_7861.0     14   7861.0     21  \n",
+       "1518248      438      181      302   level_14_7866.0     14   7866.0     22  \n",
+       "1518539      439      186      332   level_14_7878.0     14   7878.0     22  \n",
+       "1541524      429      230      139   level_14_7853.0     14   7853.0     22  \n",
+       "\n",
+       "[271 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# remove duplicates in the lipotype column\n",
+    "df.drop_duplicates(subset=['lipotype'], inplace=True)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['level_11_1642.0', 'level_9_419.0', 'level_4_15.0', 'level_7_97.0',\n",
+       "       'level_11_1641.0', 'level_9_400.0', 'level_10_822.0',\n",
+       "       'level_7_111.0', 'level_4_16.0', 'level_6_41.0', 'level_6_44.0',\n",
+       "       'level_7_90.0', 'level_10_840.0', 'level_9_342.0', 'level_7_102.0',\n",
+       "       'level_10_786.0', 'level_8_201.0', 'level_9_418.0',\n",
+       "       'level_11_1645.0', 'level_7_93.0', 'level_12_3263.0',\n",
+       "       'level_14_12202.0', 'level_9_198.0', 'level_12_3268.0',\n",
+       "       'level_14_12296.0', 'level_10_833.0', 'level_14_12295.0',\n",
+       "       'level_13_6396.0', 'level_11_1667.0', 'level_12_3265.0',\n",
+       "       'level_11_1634.0', 'level_14_12200.0', 'level_13_6394.0',\n",
+       "       'level_14_12181.0', 'level_14_12182.0', 'level_7_72.0',\n",
+       "       'level_7_108.0', 'level_14_12199.0', 'level_11_1596.0',\n",
+       "       'level_14_12205.0', 'level_11_1678.0', 'level_13_6337.0',\n",
+       "       'level_10_825.0', 'level_14_12194.0', 'level_7_89.0',\n",
+       "       'level_14_12193.0', 'level_14_12206.0', 'level_14_12204.0',\n",
+       "       'level_13_6335.0', 'level_9_424.0', 'level_12_2719.0',\n",
+       "       'level_13_6346.0', 'level_14_12191.0', 'level_14_12196.0',\n",
+       "       'level_12_3391.0', 'level_13_6336.0', 'level_14_12203.0',\n",
+       "       'level_14_12195.0', 'level_14_12192.0', 'level_10_826.0',\n",
+       "       'level_11_1569.0', 'level_6_46.0', 'level_10_805.0',\n",
+       "       'level_6_48.0', 'level_12_2956.0', 'level_10_748.0',\n",
+       "       'level_10_747.0', 'level_14_12292.0', 'level_9_410.0',\n",
+       "       'level_14_12337.0', 'level_8_137.0', 'level_10_745.0',\n",
+       "       'level_11_1655.0', 'level_9_281.0', 'level_11_1668.0',\n",
+       "       'level_9_423.0', 'level_11_1709.0', 'level_10_685.0',\n",
+       "       'level_7_85.0', 'level_14_12201.0', 'level_7_112.0',\n",
+       "       'level_12_2955.0', 'level_12_3160.0', 'level_8_140.0',\n",
+       "       'level_9_277.0', 'level_8_142.0', 'level_14_12291.0',\n",
+       "       'level_12_2718.0', 'level_8_129.0', 'level_11_1570.0',\n",
+       "       'level_8_155.0', 'level_12_3161.0', 'level_8_130.0',\n",
+       "       'level_8_208.0', 'level_6_40.0', 'level_12_3392.0', 'level_7_66.0',\n",
+       "       'level_8_106.0', 'level_12_2461.0', 'level_8_199.0',\n",
+       "       'level_9_197.0', 'level_11_1593.0', 'level_9_394.0',\n",
+       "       'level_11_1125.0', 'level_8_138.0', 'level_8_105.0',\n",
+       "       'level_9_200.0', 'level_5_15.0', 'level_8_108.0',\n",
+       "       'level_14_12338.0', 'level_6_22.0', 'level_9_421.0', 'level_4_5.0',\n",
+       "       'level_7_61.0', 'level_8_107.0', 'level_9_404.0', 'level_6_21.0',\n",
+       "       'level_8_154.0', 'level_4_4.0', 'level_7_49.0', 'level_4_3.0',\n",
+       "       'level_7_109.0', 'level_7_98.0', 'level_4_2.0', 'level_7_62.0',\n",
+       "       'level_8_165.0', 'level_12_3159.0', 'level_7_84.0',\n",
+       "       'level_13_3048.0', 'level_10_853.0', 'level_7_110.0',\n",
+       "       'level_11_793.0', 'level_13_6417.0', 'level_11_1677.0',\n",
+       "       'level_11_1656.0', 'level_9_422.0', 'level_11_1712.0',\n",
+       "       'level_12_2717.0', 'level_11_1577.0', 'level_11_1711.0',\n",
+       "       'level_10_790.0', 'level_8_213.0', 'level_14_11878.0',\n",
+       "       'level_12_2700.0', 'level_11_1363.0', 'level_11_1246.0',\n",
+       "       'level_12_2715.0', 'level_8_166.0', 'level_10_624.0',\n",
+       "       'level_8_153.0', 'level_14_10191.0', 'level_13_6185.0',\n",
+       "       'level_14_11877.0', 'level_14_12347.0', 'level_14_10192.0',\n",
+       "       'level_12_2228.0', 'level_11_794.0', 'level_10_622.0',\n",
+       "       'level_6_37.0', 'level_14_12345.0', 'level_10_688.0',\n",
+       "       'level_8_188.0', 'level_10_806.0', 'level_12_2699.0',\n",
+       "       'level_14_12776.0', 'level_11_1371.0', 'level_12_2456.0',\n",
+       "       'level_12_2695.0', 'level_12_2455.0', 'level_14_12346.0',\n",
+       "       'level_6_26.0', 'level_13_5314.0', 'level_6_38.0',\n",
+       "       'level_14_12343.0', 'level_14_12283.0', 'level_12_2462.0',\n",
+       "       'level_13_5265.0', 'level_14_12286.0', 'level_14_12285.0',\n",
+       "       'level_12_2716.0', 'level_12_1569.0', 'level_9_396.0',\n",
+       "       'level_12_3127.0', 'level_14_12335.0', 'level_8_136.0',\n",
+       "       'level_14_12341.0', 'level_14_12336.0', 'level_6_32.0',\n",
+       "       'level_6_28.0', 'level_14_5837.0', 'level_11_1241.0',\n",
+       "       'level_14_10098.0', 'level_11_1062.0', 'level_14_10097.0',\n",
+       "       'level_11_1058.0', 'level_11_1126.0', 'level_11_1063.0',\n",
+       "       'level_11_1361.0', 'level_11_1067.0', 'level_13_4107.0',\n",
+       "       'level_10_530.0', 'level_14_12284.0', 'level_10_533.0',\n",
+       "       'level_12_2101.0', 'level_4_1.0', 'level_12_2953.0',\n",
+       "       'level_7_47.0', 'level_6_23.0', 'level_8_96.0', 'level_11_1061.0',\n",
+       "       'level_8_135.0', 'level_14_11067.0', 'level_14_12768.0',\n",
+       "       'level_8_95.0', 'level_13_6118.0', 'level_12_3386.0',\n",
+       "       'level_13_6637.0', 'level_12_1571.0', 'level_14_11070.0',\n",
+       "       'level_12_1572.0', 'level_14_7877.0', 'level_14_5838.0',\n",
+       "       'level_14_12350.0', 'level_11_1111.0', 'level_14_12348.0',\n",
+       "       'level_14_12777.0', 'level_14_12775.0', 'level_14_12342.0',\n",
+       "       'level_11_1112.0', 'level_14_12767.0', 'level_13_6632.0',\n",
+       "       'level_12_2116.0', 'level_13_4341.0', 'level_14_11068.0',\n",
+       "       'level_11_1070.0', 'level_12_2118.0', 'level_14_7862.0',\n",
+       "       'level_14_11069.0', 'level_14_12349.0', 'level_14_7768.0',\n",
+       "       'level_14_7858.0', 'level_14_7765.0', 'level_14_7860.0',\n",
+       "       'level_14_7763.0', 'level_14_7875.0', 'level_14_7857.0',\n",
+       "       'level_13_4111.0', 'level_14_7764.0', 'level_12_2102.0',\n",
+       "       'level_14_7767.0', 'level_14_7770.0', 'level_11_1128.0',\n",
+       "       'level_12_2117.0', 'level_14_7876.0', 'level_14_12782.0',\n",
+       "       'level_10_555.0', 'level_14_7766.0', 'level_13_4342.0',\n",
+       "       'level_13_6117.0', 'level_14_7769.0', 'level_14_12344.0',\n",
+       "       'level_14_12781.0', 'level_13_4105.0', 'level_14_7854.0',\n",
+       "       'level_14_7859.0', 'level_14_7865.0', 'level_14_12778.0',\n",
+       "       'level_14_7861.0', 'level_14_7866.0', 'level_14_7878.0',\n",
+       "       'level_14_7853.0'], dtype=object)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# get a list of the lipotypes\n",
+    "lipotypes = df['lipotype'].unique()\n",
+    "lipotypes"
    ]
   },
   {
